CSR updated to use alt_names

--- a/openssl-tony.config
+++ b/openssl-tony.config
@@ -2,7 +2,8 @@
 default_bits        = 4096
 default_md          = sha256
 distinguished_name  = subject
-x509_extensions     = x509_ext
+req_extensions      = req_ext
+x509_extensions     = req_ext
 string_mask         = utf8only
 
 [ subject ]
@@ -17,13 +18,23 @@ organizationName_default      = Cloud Eats Cloud
 organisationUnitName          = Department
 organisationUnitName_default  = IT
 emailAddress                  = Email
-emailAddress_default          = ca@cloudeatscloud.com
+emailAddress_default          = tony@cloudeatscloud.com
 commonName                     = Common Name
-commonName_default             = Cloud Eats Cloud CA
+commonName_default             = Tony@CloudEatsCloud
 
-[ x509_ext ]
+[ req_ext ]
 subjectKeyIdentifier    = hash
-authorityKeyIdentifier  = keyid,issuer
-basicConstraints        = CA:TRUE, pathlen:1
-keyUsage                = keyCertSign, cRLSign
+basicConstraints        = CA:FALSE
+keyUsage                = digitalSignature, keyEncipherment
+subjectAltName          = @alt_names
 nsComment               = "OpenSSL Generated Certificate"
+extendedKeyUsage        = serverAuth
+
+[ alt_names ]
+DNS.1       = localhost
+DNS.2       = localhost.local
+DNS.3       = localhost.localdomain
+DNS.4       = 127.0.0.1
+DNS.5       = ::1
+IP.1        = 127.0.0.1
+IP.2        = ::1
