--- a/openssl.config
+++ b/openssl.config
@@ -1,5 +1,6 @@
 [ req ]
-default_bits        = 2048
+default_bits        = 4096
+default_md          = sha256
 default_keyfile     = server-key.pem
 distinguished_name  = subject
 req_extensions      = req_ext
@@ -9,39 +10,29 @@ string_mask         = utf8only
 # The Subject DN can be formed using X501 or RFC 4514 (see RFC 4519 for a description).
 #   Its sort of a mashup. For example, RFC 4514 does not provide emailAddress.
 [ subject ]
-countryName         = GB
-countryName_default     = US
+countryName           = GB
+stateOrProvinceName   = Berkshire
+localityName          = Reading
+organizationName      = CloudEatsCloud
 
-stateOrProvinceName     = Berkshire
-stateOrProvinceName_default = NY
-
-localityName            = Reading
-localityName_default        = New York
-
-organizationName         = CGI UK Limited
-organizationName_default    = Example, LLC
 
 # Use a friendly name here because its presented to the user. The server's DNS
 #   names are placed in Subject Alternate Names. Plus, DNS names here is deprecated
 #   by both IETF and CA/Browser Forums. If you place a DNS name here, then you 
 #   must include the DNS name in the SAN too (otherwise, Chrome and others that
 #   strictly follow the CA/Browser Baseline Requirements will fail).
-commonName          = UK-LJFW0F72.GROUPINFRA.COM
-commonName_default      = Example Company
-
-emailAddress            = anthony.colby@cgi.com
-emailAddress_default        = test@example.com
+commonName          = Cloud Eats Cloud CA
+emailAddress            = tony@cloudeatscloud.com
 
 # Section x509_ext is used when generating a self-signed certificate. I.e., openssl req -x509 ...
 [ x509_ext ]
-
 subjectKeyIdentifier        = hash
 authorityKeyIdentifier  = keyid,issuer
 
 # You only need digitalSignature below. *If* you don't allow
 #   RSA Key transport (i.e., you use ephemeral cipher suites), then
 #   omit keyEncipherment because that's key transport.
-basicConstraints        = CA:FALSE
+basicConstraints        = CA:TRUE
 keyUsage            = digitalSignature, keyEncipherment
 subjectAltName          = @alternate_names
 nsComment           = "OpenSSL Generated Certificate"
