Updated web.config to process without prompt

--- a/web.config
+++ b/web.config
@@ -1,40 +1,35 @@
 [ req ]
-default_bits        = 4096
-default_md          = sha256
-distinguished_name  = subject
-req_extensions      = req_ext
-x509_extensions     = req_ext
-string_mask         = utf8only
+default_bits                  = 4096
+default_md                    = sha256
+distinguished_name            = subject
+req_extensions                = req_ext
+x509_extensions               = req_ext
+string_mask                   = utf8only
+prompt                        = no
 
 [ subject ]
-countryName                   = Country
-countryName_default           = GB
-stateOrProvinceName           = County
-stateOrProvinceName_default   = Berkshire
-localityName                  = Town
-localityName_default          = Reading
-organizationName              = Organisation
-organizationName_default      = Cloud Eats Cloud
-organisationUnitName          = Department
-organisationUnitName_default  = IT
-emailAddress                  = Email
-emailAddress_default          = tony@cloudeatscloud.com
-commonName                     = Common Name
-commonName_default             = Tony@CloudEatsCloud
+countryName                   = GB
+stateOrProvinceName           = Berkshire
+localityName                  = Reading
+organizationName              = Cloud Eats Cloud
+organizationalUnitName        = IT
+emailAddress                  = web@cloudeatscloud.com
+commonName                    = Cloud Eat Cloud Dev Web Server
 
 [ req_ext ]
-subjectKeyIdentifier    = hash
-basicConstraints        = CA:FALSE
-keyUsage                = digitalSignature, keyEncipherment
-subjectAltName          = @alt_names
-nsComment               = "OpenSSL Generated Certificate"
-extendedKeyUsage        = serverAuth
+subjectKeyIdentifier          = hash
+basicConstraints              = CA:FALSE
+keyUsage                      = digitalSignature, keyEncipherment
+subjectAltName                = @alt_names
+nsComment                     = "OpenSSL Generated Web Server Certificate"
+extendedKeyUsage              = serverAuth
 
 [ alt_names ]
-DNS.1       = localhost
-DNS.2       = localhost.local
-DNS.3       = localhost.localdomain
-DNS.4       = 127.0.0.1
-DNS.5       = ::1
-IP.1        = 127.0.0.1
-IP.2        = ::1
+DNS.1                         = web.cloudeatcloud.com       
+DNS.2                         = localhost
+DNS.3                         = localhost.local
+DNS.4                         = localhost.localdomain
+DNS.5                         = 127.0.0.1
+DNS.6                         = ::1
+IP.1                          = 127.0.0.1
+IP.2                          = ::1
